@@ -12,6 +12,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (5.3-dev, SVN trunk):
 ------------------------------------
 
+- fix WMS LegendURL to print sld_version for 1.3.0 Capabilities (#473)
+
 - add GetSchemaExtension to WMS to support GetStyles in Capabilities XML (#473)
 
 - move xlink declaration to root of WMS 1.3.0 DescribeLayerResponse
